[project]
name = "raspberry-pi-ledblink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0; platform_system == 'Linux' and platform_machine == 'armv7l'",
]

[[tool.mypy.overrides]]
module = ["gpiozero"]
ignore_missing_imports = true
